@@ -1,2 +1,3 @@
 drscholl@users.sourceforge.net
 "Damian Hodgkiss" <mian@thirty4.com> -- Win32 port
+"Colten Edwards" <edwards@bitchx.dimension6.com>
