@@ -403,6 +403,8 @@ void set_val (char *d, unsigned short val);
 #define MSG_CLIENT_DISCONNECT		10101
 #define MSG_CLIENT_KILL_SERVER		10110
 #define MSG_CLIENT_REMOVE_SERVER	10111
+#define MSG_CLIENT_USAGE_STATS		10115	/* server usage stats */
+#define MSG_SERVER_USAGE_STATS		10115
 #define MSG_SERVER_COMPRESSED_DATA	10200	/* deprecated */
 #define MSG_CLIENT_SHARE_FILE		10300	/* generic media type */
 #define MSG_SERVER_REMOTE_ERROR		10404	/* send 404 to a remote user */
@@ -547,6 +549,7 @@ HANDLER (server_login);
 HANDLER (server_login_ack);
 HANDLER (server_reconfig);
 HANDLER (server_stats);
+HANDLER (server_usage);
 HANDLER (server_version);
 HANDLER (share_file);
 HANDLER (show_motd);
